Add new AI addons: chart generator, text designer, UI designer, flux face character, shotstack, and veed lipsync integration

--- a/env.example
+++ b/env.example
@@ -6,3 +6,12 @@ ELEVENLABS_DEFAULT_VOICE_ID=JBFqnCBsd6RMkjVDRZzb
 
 # Optional: Default model ID (Eleven v3 is recommended)
 ELEVENLABS_DEFAULT_MODEL_ID=eleven_multilingual_v2
+
+# OpenAI API Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Fal.ai API Configuration
+FAL_KEY=your_fal_ai_api_key_here
+
+# Shotstack API Configuration
+SHOTSTACK_API_KEY=your_shotstack_api_key_here
