--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
+    "test": "jest",
     "worker": "ts-node worker.ts",
     "worker:dev": "ts-node --watch worker.ts",
     "worker:prod": "node -r ts-node/register worker.ts",
     "db:migrate": "psql $DATABASE_URL -f docs/supabase-jobs-schema.sql",
+    "db:migrate:production-planner": "psql $DATABASE_URL -f docs/supabase-production-planner-schema.sql",
+    "db:migrate:production-manifest": "psql $DATABASE_URL -f docs/supabase-production-manifest-phase1.sql",
+    "db:migrate:studio-blueprint": "psql $DATABASE_URL -f docs/supabase-studio-blueprint-schema.sql",
+    "db:migrate:dreamcut-jobs": "psql $DATABASE_URL -f docs/supabase-dreamcut-jobs-schema.sql",
     "db:reset": "psql $DATABASE_URL -c \"DROP TABLE IF EXISTS jobs CASCADE;\" && npm run db:migrate",
+    "db:reset:production-planner": "psql $DATABASE_URL -c \"DROP TABLE IF EXISTS production_manifest CASCADE; DROP TABLE IF EXISTS production_assets CASCADE; DROP TABLE IF EXISTS production_scenes CASCADE;\" && npm run db:migrate:production-planner",
+    "db:reset:production-manifest": "psql $DATABASE_URL -c \"DROP TABLE IF EXISTS dreamcut_production_manifest CASCADE;\" && npm run db:migrate:production-manifest",
+    "db:reset:studio-blueprint": "psql $DATABASE_URL -c \"DROP TABLE IF EXISTS studio_blueprints CASCADE;\" && npm run db:migrate:studio-blueprint",
+    "db:reset:dreamcut-jobs": "psql $DATABASE_URL -c \"DROP TABLE IF EXISTS dreamcut_jobs CASCADE;\" && npm run db:migrate:dreamcut-jobs",
     "verify-safety": "node scripts/verify-safety.js"
   },
   "dependencies": {
@@ -49,6 +58,9 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
+    "@types/uuid": "^10.0.0",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -71,17 +83,21 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^0.9.9",
     "zod": "3.25.67",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "jest": "^29.7.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
