--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@jest/globals": "^30.1.2",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/jest": "^29.5.14",
     "@types/node": "^22",
